<resources>
    <string name="app_name">Super Duper HW5</string>
    <string name="enter_email_hint">email</string>
    <string name="submit_btn">submit</string>
    <string name="enter_password_hint">password</string>
    <string name="app_name_1">ani.me</string>
    <string name="welcome_text">tell us who you are</string>
    <string name="register_now_btn">register now</string>
    <string name="registration_text">please, introduce yourself</string>
    <string name="register_btn">register</string>
    <string name="name_hint">name</string>
    <string name="phone_hint">phone</string>
    <string name="repeat_password_hint">repeat password</string>
    <string name="phone_regex">^\\+7 \\(9\\d{2}\\)-\\d{3}-\\d{2}-\\d{2}$</string>
    <string name="phone_regex_incomplete">^\\+7 \\(9(\\d(\\d\\)-(\\d(\\d(\\d-(\\d(\\d-(\\d(\\d)?)?)?)?)?)?)?)?)?$</string>
    <string name="phone_does_not_match_mask_error">phone number must match mask +7 (9##)-###-##-##</string>
    <string name="phone_incomplete_error">phone number must contain 10 digits</string>
    <string name="email_regex">^[a-zA-Z0-9._-]+@[a-zA-Z0-9._-]+\\.[a-zA-Z0-9_-]+$</string>
    <string name="password_regex">^(?=.*[A-Za-z])(?=.*\\d)[A-Za-z\\d]{8,}$</string>
    <string name="empty_name_error">you should enter name</string>
    <string name="empty_anime_name_error">you should enter anime name</string>
    <string name="empty_desc_error">you should enter description</string>
    <string name="empty_email_error">you should enter email</string>
    <string name="empty_released_error">you should enter released year</string>
    <string name="invalid_email_error">invalid email</string>
    <string name="invalid_released_error">invalid year</string>
    <string name="empty_password_error">you should enter password</string>
    <string name="short_password_error">at least 8 characters</string>
    <string name="weak_password_error">use both letters and digits</string>
    <string name="password_does_not_match_error">password doesn\'t match</string>
    <string name="feed_bn">feed</string>
    <string name="account_bn">account</string>
    <string name="add_anime_bn">add anime</string>
    <string name="unknown_user_error">user with such email does not exist</string>
    <string name="wrong_password_error">incorrect password, try again</string>
    <string name="account_section_name">ACCOUNT</string>
    <string name="name_label">name:</string>
    <string name="email_label">email:</string>
    <string name="phone_label">phone:</string>
    <string name="save_changes_btn">save changes</string>
    <string name="password_changing_label">PASSWORD CHANGING</string>
    <string name="current_password_label">current password:</string>
    <string name="current_password_hint">current password</string>
    <string name="new_password_hint">new password</string>
    <string name="change_password_btn">change password</string>
    <string name="log_out_btn">log out</string>
    <string name="delete_acc_btn">delete acc</string>
    <string name="not_unique_phone_error">user with such phone already exists</string>
    <string name="not_unique_email_error">user with such email already exists</string>
    <string name="changing_success_msg">successfully changed</string>
    <string name="acc_deleting_dialog_header">ACCOUNT DELETING</string>
    <string name="acc_deleting_dialog_text">are you sure?</string>
    <string name="acc_deleting_dialog_positive_button">YES</string>
    <string name="acc_deleting_dialog_negative_button">NO</string>
    <string name="anime_deleting_dialog_header">ANIME DELETING</string>
    <string name="anime_deleting_dialog_text">are you sure you want to delete anime?</string>
    <string name="anime_deleting_dialog_positive_button">DELETE</string>
    <string name="anime_deleting_dialog_negative_button">CANCEL</string>
    <string name="add_anime_section_name">ADD ANIME</string>
    <string name="released_hint">released</string>
    <string name="description_hint">description</string>
    <string name="add_anime_btn">add anime</string>
    <string name="add_anime_success">successfully added</string>
    <string name="not_unique_anime">such anime already added</string>
    <string name="feed_section_name">FEED</string>
    <string name="favorites_header">FAVORITES</string>
    <string name="no_favorites_found_tv">no favorites found</string>
    <string name="no_anime_added_yet_tv">no anime added yet</string>
    <string name="released_year_label">released year:</string>
    <string name="rate_btn">rate</string>
</resources>
