<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/app_name_1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_section_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_section_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/account_section_name"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

        <TextView
            android:id="@+id/tv_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:text="@string/name_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_section_name" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tv_email_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name_label"
            tools:text="regina" />

        <TextView
            android:id="@+id/tv_email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:text="@string/email_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tv_phone_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email_label"
            tools:text="regina@regina.regina" />

        <TextView
            android:id="@+id/tv_phone_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:text="@string/phone_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/til_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/btn_save_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_label">

            <EditText
                android:id="@+id/et_phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/phone_hint"
                android:inputType="number"
                android:maxLength="18"
                tools:ignore="TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes_btn"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_phone" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/tv_password_change_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_save_phone" />

        <TextView
            android:id="@+id/tv_password_change_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/password_changing_label"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/til_current_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_current_password"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorPrimary"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/til_new_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password_change_label">

            <EditText
                android:id="@+id/et_current_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/current_password_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="64" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_new_password"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorPrimary"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/til_repeat_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_current_password">

            <EditText
                android:id="@+id/et_new_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/new_password_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="64" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_repeat_password"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorPrimary"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/btn_save_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_new_password">

            <EditText
                android:id="@+id/et_repeat_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/repeat_password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="64" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:text="@string/change_password_btn"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@id/divider1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_repeat_password" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/btn_log_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_save_password" />

        <Button
            android:id="@+id/btn_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="128dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/log_out_btn"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_delete_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <Button
            android:id="@+id/btn_delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="128dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/delete_acc_btn"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_log_out"
            app:layout_constraintTop_toBottomOf="@id/divider1" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
