<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:text="@string/app_name_1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_welcome_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/til_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/til_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome_text">

            <EditText
                android:id="@+id/et_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/enter_email_hint"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="256" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorPrimary"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/btn_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email">

            <EditText
                android:id="@+id/et_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/enter_password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="64" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:text="@string/submit_btn"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btn_to_registration_page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password" />

        <Button
            android:id="@+id/btn_to_registration_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="64dp"
            android:text="@string/register_now_btn"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_submit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
